--- a/package.json
+++ b/package.json
@@ -1,6 +1,8 @@
 {
   "name": "finalfrontend",
   "version": "0.1.0",
+  "proxy": "https://qj4tudodmb.execute-api.us-east-1.amazonaws.com",
+
   "private": true,
   "dependencies": {
     "@testing-library/dom": "^10.4.0",
